src/test/deca/syntax/invalid/mainOuvert.deca
// Description:
//    Main ouvert
//
// Resultats:
//    missing '}' at '<EOF>'


//
// Historique:
//    cree le 11/01/2024


{

println("Itachi Uchiwa");

